# code-breaker-ai-demo

./: .gitignore  ASYNC_UPDATES.md  Dockerfile  README.md  agent_protocol.py  api.py  config.py  evaluation_function.py  fastapi_deps.py  fastapi_server.py  game_engine.py  logger_provider.py  main.py  pyproject.toml
.github/workflows/: build-docker-image.yml
chains/: guesser_v1.py  guesser_v2.py  guesser_v3.py  guesser_v3_optimized.py
docs/: journal.md  notes.md  todo.md
models/: guesser_v3.py
prompts/: guesser_v3.py
tests/: agent_test_runner.py  test_agent_v1.py  test_agent_v2.py  test_agent_v3.py  test_async_parallel.py  test_evaluation_fun.py  test_game_engine.py  test_optimized_performance.py
